--- a/index.html
+++ b/index.html
@@ -4,37 +4,51 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Siddhartha Saurav Gogoi | Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
+   
 </head>
 
 <body>
+    <div id="wrapper-nav">
+        <nav id="navbar">
+            <ul>
+                <li>
+                    <a href="#about">ABOUT</a>
+                </li>
+                <li>
+                    <a href="#skills">SKILLS</a>
+                </li>
+                <li>
+                    <a href="#projects">PROJECTS</a>
+                </li>
+                <li>
+                    <a href="#contact">CONTACT</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 
-    <nav id="navbar">
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
 
     <div id="welcome-section">
-        <h1>Hello World</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-
+        <h1>
+            <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Siddhartha.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
+              <span class="wrap"></span>
+            </a>
+          </h1>
     </div>
 
-    <div id="projects">
-        <div class="project-tile">
+        <div id="skills">
 
         </div>
-    </div>
 
-    <div id="contact">
-        <p id="example2"></p>
+        <div id="projects">
+            <p id="project-tile"></p>
 
-    </div>
+        </div>
+        <script src="main.js"></script>
 </body>
 
 </html>
