about me section started

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Siddhartha Saurav Gogoi | Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
    
 </head>
 
@@ -37,11 +36,33 @@
             <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Siddhartha.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
               <span class="wrap"></span>
             </a>
-          </h1>
+        </h1>
     </div>
 
-        <div id="skills">
+        <div id="about">
+            <h1>About Me</h1>
+            <div id="about-wrap">
+                <div id="about-me">
+                    <p>
+                        Hi, once again! My name is Siddhartha. I am a web developer based out of Bangalore, India.
+                        My work encompasses full stack web development in trending technologies. You can reach out to
+                        me on the contact form. Some of my work encompasses the technologies such as:
+                    </p>
+                    <p>
+                        <ul>
+                            <li>MERN - full stack applications</li>
+                            <li>React SPA</li>
+                            <li>GatsbyJS powered websites</li>
+                            <li>Webpack</li>
+                            <li>Android</li>
+                        </ul>
+                    </p>
 
+                </div>
+                <div id="about-img">
+                    <img src="">
+                </div>
+            </div>
         </div>
 
         <div id="projects">
