--- a/index.html
+++ b/index.html
@@ -7,69 +7,75 @@
     <title>Siddhartha Saurav Gogoi | Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-   
+
 </head>
 
 <body>
-    <div id="wrapper-nav">
-        <nav id="navbar">
-            <ul>
-                <li>
-                    <a href="#about">ABOUT</a>
-                </li>
-                <li>
-                    <a href="#skills">SKILLS</a>
-                </li>
-                <li>
-                    <a href="#projects">PROJECTS</a>
-                </li>
-                <li>
-                    <a href="#contact">CONTACT</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+    <nav id="navbar">
+        <img src="">
+        <ul>
+            <li>
+                <a href="#about">ABOUT</a>
+            </li>
+            <li>
+                <a href="#skills">SKILLS</a>
+            </li>
+            <li>
+                <a href="#projects">PROJECTS</a>
+            </li>
+            <li>
+                <a href="#contact">CONTACT</a>
+            </li>
+        </ul>
+    </nav>
 
 
-    <div id="welcome-section">
+    <section id="welcome-section">
         <h1>
-            <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Siddhartha.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
-              <span class="wrap"></span>
+            <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Siddhartha.", "I am not Creative.", "I Love/Hate Design.", "I Love/Hate to Develop." ]'>
+                <span class="wrap"></span>
             </a>
         </h1>
-    </div>
+    </section>
 
-        <div id="about">
-            <h1>About Me</h1>
-            <div id="about-wrap">
-                <div id="about-me">
-                    <p>
-                        Hi, once again! My name is Siddhartha. I am a web developer based out of Bangalore, India.
-                        My work encompasses full stack web development in trending technologies. You can reach out to
-                        me on the contact form. Some of my work encompasses the technologies such as:
-                    </p>
-                    <p>
-                        <ul>
-                            <li>MERN - full stack applications</li>
-                            <li>React SPA</li>
-                            <li>GatsbyJS powered websites</li>
-                            <li>Webpack</li>
-                            <li>Android</li>
-                        </ul>
-                    </p>
+    <section id="about">
+        <h1>About Me</h1>
+        <div id="about-wrap">
+            <div id="about-me">
+                <p>
+                    Hi, once again! My name is Siddhartha. I am a web developer based out of Bangalore, India. My work encompasses full stack
+                    web development in trending technologies. You can reach out to me on the contact form. Some of my work
+                    encompasses the technologies such as:
+                </p>
+                <p>
+                    <ul>
+                        <li>MERN - full stack applications</li>
+                        <!-- <li>React SPA</li> -->
+                        <!-- <li>GatsbyJS powered websites</li> -->
+                        <!-- <li>Webpack</li>
+                            <li>Android</li> -->
+                    </ul>
+                </p>
 
-                </div>
-                <div id="about-img">
-                    <img src="">
-                </div>
+            </div>
+            <div id="about-img">
+                <img src="">
             </div>
         </div>
+    </section>
 
-        <div id="projects">
-            <p id="project-tile"></p>
+    <section id="projects">
+        <p id="project-tile">Maksudu</p>
 
+    </section>
+
+    <section id="skills">
+        <div>
+            Skills
+            <h1>KEla</h1>
         </div>
-        <script src="main.js"></script>
+    </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
